--- a/mhoapp/theme/static_src/src/css/navbar.css
+++ b/mhoapp/theme/static_src/src/css/navbar.css
@@ -225,7 +225,7 @@
       display: flex;
       align-items: center;
       box-sizing: initial !important;
-      padding: .75rem .75rem 2rem .75rem;
+      padding: .75rem;
       text-align: left;      
     }
 
@@ -294,29 +294,6 @@
 
 /**
  * ----------------------------------------
- * Large screen
- * ----------------------------------------
- */
-@screen lg {  
-  .luxbar-menu {
-    .dropdown {
-      &:hover {
-        ul {
-          top: 60px !important;
-        }    
-
-        .luxbar-item-a-first-level {      
-          /* Horizontal line for the 2nd level box in desktop */
-          &:after {
-            top: 49px !important;
-          }
-        }
-      }
-    }
-  } 
-}
-/**
- * ----------------------------------------
  * Extra Large screen
  * ----------------------------------------
  */
@@ -335,6 +312,19 @@
     }
 
     .dropdown {
+      &:hover {
+        ul {
+          top: 60px !important;
+        }    
+
+        .luxbar-item-a-first-level {      
+          /* Horizontal line for the 2nd level box in desktop */
+          &:after {
+            top: 49px !important;
+          }
+        }
+      }
+
       ul {
         column-gap: 7rem; 
       }
@@ -342,6 +332,11 @@
   }
 }
 
+/**
+ * ----------------------------------------
+ * Super Extra Large screen
+ * ----------------------------------------
+ */
 @screen 2xl {  
   .luxbar-menu {
     .luxbar-item-first-level {
